--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://modest-bell-d13a0b.netlify.app/'
 languageCode = 'en-us'
 title = 'Hello World'
 theme = "PaperMod"
